--- a/packages/rettangoli-sites/templates/default/data/site.yaml
+++ b/packages/rettangoli-sites/templates/default/data/site.yaml
@@ -8,6 +8,13 @@ nav:
   - text: About
     href: /about/
 
+footer:
+  links:
+    - text: Privacy
+      href: /privacy/
+    - text: Terms
+      href: /terms/
+
 landing:
   features:
     - title: Simple
