--- a/packages/rettangoli-sites/templates/default/pages/blog.yaml
+++ b/packages/rettangoli-sites/templates/default/pages/blog.yaml
@@ -2,11 +2,13 @@
 template: base
 title: Blog
 ---
-- h1: Blog
+- rtgl-text s="h1" mb="xl": Blog
 
-- div.posts:
+- rtgl-view g="md" w="f":
     - $for post in collections.blog:
-        - article:
-            - 'a href="${post.url}"':
-                - h2: ${post.data.title}
-            - p.meta: ${post.data.date}
+        - 'a href="${post.url}" style="text-decoration: none"':
+            - rtgl-view w="f" p="lg" bgc="su" br="lg" h-bgc="suv" h-cur="p":
+                - rtgl-view d="h" av="c" w="f":
+                    - rtgl-text s="lg": ${post.data.title}
+                    - rtgl-view flex="1":
+                    - rtgl-text s="sm" c="mu-fg": ${post.data.date}
