--- a/packages/rettangoli-sites/templates/default/templates/post.yaml
+++ b/packages/rettangoli-sites/templates/default/templates/post.yaml
@@ -3,12 +3,22 @@
         - meta charset="utf-8":
         - meta name="viewport" content="width=device-width,initial-scale=1":
         - title: ${title} - ${site.name}
-        - link rel="stylesheet" href="/css/style.css":
-    - body:
-        - $partial: header
-        - main:
-            - article:
-                - p.meta: ${date}
-                - "${content}"
-                - 'a href="/blog/"': ← Back to Blog
-        - $partial: footer
+        - link rel="stylesheet" href="/css/theme.css":
+        - script src="https://cdn.jsdelivr.net/npm/construct-style-sheets-polyfill@3.1.0/dist/adoptedStyleSheets.min.js":
+        - script src="https://cdn.jsdelivr.net/npm/@rettangoli/ui@0.1.31/dist/rettangoli-iife-ui.min.js":
+    - body.dark:
+        - rtgl-view h="64":
+        - rtgl-view w="f" ah="c":
+            - rtgl-view d="h" g="xl" pb="lg" md-w="100vw" lg-w="768" w="1024" ph="lg":
+                - rtgl-view id="content-container" lg-w="100%" w="624":
+                    - rtgl-text s="sm" c="mu-fg" mb="md": ${date}
+                    - "${content}"
+                    - rtgl-view h="xl":
+                    - 'a href="/blog/" style="text-decoration: none"':
+                        - rtgl-text c="pr" h-cur="p": ← Back to Blog
+                - 'rtgl-view lg-hide flex="1" style="position: sticky; top: 64px;"':
+                    - rtgl-page-outline id="page-outline" target-id="content-container":
+            - rtgl-view h="30vh":
+            - $partial: footer
+        - rtgl-view pos="abs" cor="top" ah="c" bgc="bg":
+            - $partial: header
