--- a/packages/rettangoli-ui/src/components/dropdownMenu/dropdownMenu.view.yaml
+++ b/packages/rettangoli-ui/src/components/dropdownMenu/dropdownMenu.view.yaml
@@ -46,7 +46,7 @@ refs:
 
 template:
   - rtgl-popover#popover ?open=${open} x=${x} y=${y} placement=${placement}:
-      - rtgl-view wh=300 sv g=xs slot=content bgc=background br=md:
+      - rtgl-view wh=300 sv g=xs slot=content bgc=bg br=md:
           - $for item, i in items:
               - $if item.type == 'label':
                   - rtgl-view w=f ph=lg pv=md:
