--- a/packages/rettangoli-ui/src/components/globalUi/globalUi.view.yaml
+++ b/packages/rettangoli-ui/src/components/globalUi/globalUi.view.yaml
@@ -59,9 +59,9 @@ template:
       - rtgl-view slot=content g=lg p=lg:
           - rtgl-view d=h g=md:
               - rtgl-view d=h ah=c av=c g=md:
-              - rtgl-view g=md:
+                  - rtgl-view g=md:
                   - rtgl-view h=24 av=c:
-                      - rtgl-text fw=600: ${config.title}
+                      - rtgl-text s=lg: ${config.title}
                   - rtgl-text: ${config.message}
           - rtgl-view d=h g=md mt=lg w=f ah=e:
               - $if config.mode == 'confirm':
