--- a/packages/rettangoli-ui/src/components/popoverInput/popoverInput.view.yaml
+++ b/packages/rettangoli-ui/src/components/popoverInput/popoverInput.view.yaml
@@ -38,7 +38,7 @@ template:
   - rtgl-view#text-display w=f cur=p:
       - rtgl-text: ${value}
   - rtgl-popover#popover ?open=${isOpen} x=${position.x} y=${position.y}:
-      - rtgl-view g=md w=240 slot=content bgc=background br=md:
+      - rtgl-view g=md w=240 slot=content bgc=bg br=md:
           - rtgl-text: ${label}
           - rtgl-input#input w=f placeholder=${placeholder}:
           - rtgl-view w=f ah=e:
