--- a/packages/rettangoli-ui/src/components/select/select.view.yaml
+++ b/packages/rettangoli-ui/src/components/select/select.view.yaml
@@ -78,11 +78,11 @@ template:
               - rtgl-svg#clear-button mr=md svg=x wh=16 c=mu-fg cur=p data-testid="select-clear-button":
           - rtgl-svg svg=chevronDown wh=16 c=mu-fg:
   - rtgl-popover#popover ?open=${isOpen} x=${position.x} y=${position.y} placement=right-start:
-      - rtgl-view wh=300 g=xs slot=content bgc=background br=md sv=true:
+      - rtgl-view wh=300 g=xs slot=content bgc=bg br=md sv=true:
           - $for option, i in options:
               - rtgl-view#option-${i} w=f ph=lg pv=md cur=p br=md bgc=${option.bgc} data-testid=${option.testId}:
                   - rtgl-text: ${option.label}
           - $if showAddOption:
-              - rtgl-view w=f bw=xs bc=mu-bg bt=sm:
+              - rtgl-view w=f bw=xs bc=mu bwt=sm:
               - rtgl-view#option-add w=f ph=lg pv=md cur=p br=md bgc=${addOptionBgc} data-testid="select-add-option":
                   - rtgl-text c=ac: ${addOptionLabel}
