--- a/packages/rettangoli-ui/src/components/tooltip/tooltip.view.yaml
+++ b/packages/rettangoli-ui/src/components/tooltip/tooltip.view.yaml
@@ -19,5 +19,5 @@ attrsSchema:
 
 template:
   - rtgl-popover#popover ?open=${open} x=${x} y=${y} placement=${placement} no-overlay:
-      - rtgl-view slot=content bgc=background bc=border br=md p=sm ah=c av=c:
-          - rtgl-text ta=c s=sm c=foreground: ${content}
+      - rtgl-view slot=content bgc=bg bc=bo br=md p=sm ah=c av=c:
+          - rtgl-text ta=c s=sm c=fg: ${content}
