--- a/packages/rettangoli-ui/src/components/globalUi/globalUi.view.yaml
+++ b/packages/rettangoli-ui/src/components/globalUi/globalUi.view.yaml
@@ -51,7 +51,7 @@ refs:
     eventListeners:
       close:
         handler: handleDropdownClose
-      click-item:
+      item-click:
         handler: handleDropdownItemClick
 
 template:
