--- a/packages/rettangoli-ui/src/components/select/select.view.yaml
+++ b/packages/rettangoli-ui/src/components/select/select.view.yaml
@@ -29,7 +29,7 @@ propsSchema:
       type: any
     onChange:
       type: function
-    no-clear:
+    noClear:
       type: boolean
     addOption:
       type: object
