--- a/apps/rettangoli.dev/data/docs.yaml
+++ b/apps/rettangoli.dev/data/docs.yaml
@@ -44,6 +44,15 @@ items:
       - id: rtgl-input
         title: "Input"
         href: "/ui/docs/primitives/rtgl-input"
-      # - id: rtgl-input-number
-      #   title: "Input Number"
-      #   href: "/ui/docs/primitives/rtgl-input-number"
+      - id: rtgl-input-number
+        title: "Input Number"
+        href: "/ui/docs/primitives/rtgl-input-number"
+      - id: rtgl-textarea
+        title: "Textarea"
+        href: "/ui/docs/primitives/rtgl-textarea"
+      - id: rtgl-slider
+        title: "Slider"
+        href: "/ui/docs/primitives/rtgl-slider"
+      - id: rtgl-popover
+        title: "Popover"
+        href: "/ui/docs/primitives/rtgl-popover"
